--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,124 @@
+aiohttp==2.2.5
+apturl==0.5.2
 async-timeout==1.4.0
 asyncio==3.4.3
+beautifulsoup4==4.4.1
+bleach==2.0.0
+blinker==1.3
+Brlapi==0.6.4
+bson==0.4.3
+chardet==2.3.0
+checkbox-support==0.22
+click==6.6
+command-not-found==0.3
+cryptography==1.2.3
+cycler==0.10.0
+decorator==4.0.11
+defer==1.0.6
+devscripts===2.16.2ubuntu3
+entrypoints==0.2.2
+feedparser==5.1.3
+Flask==0.11.1
+Flask-PyMongo==0.4.1
+guacamole==0.9.2
+html5lib==0.999999999
+httplib2==0.9.1
+idna==2.0
+imutils==0.3.6
+ipykernel==4.6.1
+ipython==6.0.0
+ipython-genutils==0.2.0
+isodate==0.5.4
+itsdangerous==0.24
+jedi==0.10.2
+Jinja2==2.8
+jsonschema==2.6.0
+jupyter-client==5.0.1
+jupyter-core==4.3.0
+language-selector==0.1
+louis==2.6.4
+lxml==3.5.0
+Magic-file-extensions==0.2
+Mako==1.0.3
+MarkupSafe==0.23
+matplotlib==2.0.2
+mistune==0.7.4
+multidict==3.2.0
+nbconvert==5.1.1
+nbformat==4.3.0
+networkx==1.9
+notebook==5.0.0
+numpy==1.12.1
+oauthlib==1.0.3
+onboard==1.2.0
+padme==1.1.1
+pandocfilters==1.4.1
+pbr==1.10.0
+pexpect==4.0.1
+pickleshare==0.7.4
+Pillow==3.1.2
+plainbox==0.25
+prompt-toolkit==1.0.14
+psycopg2==2.6.1
+ptyprocess==0.5
+pyasn1==0.1.9
+pycups==1.9.73
+pycurl==7.43.0
+Pygments==2.2.0
+pygobject==3.20.0
+PyJWT==1.3.0
+pymongo==3.3.1
+pyparsing==2.0.3
+python-apt==1.1.0b1
+python-dateutil==2.6.0
+python-debian==0.1.27
+python-systemd==231
+pytz==2016.4
+pyxdg==0.25
+pyzmq==16.0.2
+rdflib==4.2.1
+reportlab==3.3.0
 requests==2.9.1
+scikit-learn==0.18.1
+scipy==0.19.0
+sessioninstaller==0.0.0
+Shapely==1.4.4
+simplegeneric==0.8.1
 simplejson==3.8.2
+six==1.10.0
+sklearn==0.0
+stevedore==1.17.0
+system-service==0.3
 telepot==12.3
+terminado==0.6
+testpath==0.3
+tornado==4.5.1
+traitlets==4.3.2
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+unity-scope-calculator==0.1
+unity-scope-chromiumbookmarks==0.1
+unity-scope-colourlovers==0.1
+unity-scope-devhelp==0.1
+unity-scope-firefoxbookmarks==0.1
+unity-scope-gdrive==0.7
+unity-scope-manpages==0.1
+unity-scope-openclipart==0.1
+unity-scope-texdoc==0.1
+unity-scope-tomboy==0.1
+unity-scope-virtualbox==0.1
+unity-scope-yelp==0.1
+unity-scope-zotero==0.1
+urllib3==1.13.1
+usb-creator==0.3.0
+virtualenv==15.0.3
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.11.10
+xdiagnose==3.8.4.1
+xkit==0.0.0
+XlsxWriter==0.7.3
+yarl==0.12.0
